# aapp

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: installation.md  photogrammetry-for-artifacts.md
src/aapp/: __init__.py  calibration.py  cli.py  engines.py  pipeline.py  undistort.py  validation.py  workspace.py
tests/: test_cli.py  test_engines.py  test_workspace.py
